// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal  displays any content in the button row 1`] = `
<div
  className="p-modal"
>
  <div
    aria-describedby="Uakgb_J5m9g-0JDMbcJqLJ"
    aria-labelledby="Uakgb_J5m9g-0JDMbcJqLJ"
    className="p-modal__dialog"
    onClick={[Function]}
    role="dialog"
  >
    <div
      id="Uakgb_J5m9g-0JDMbcJqLJ"
    >
      Button tester
    </div>
    <div
      className="p-modal__button-row"
    >
      <div>
        I am not a button
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal  displays buttons that have been supplied 1`] = `
<div
  className="p-modal"
>
  <div
    aria-describedby="Uakgb_J5m9g-0JDMbcJqLJ"
    aria-labelledby="Uakgb_J5m9g-0JDMbcJqLJ"
    className="p-modal__dialog"
    onClick={[Function]}
    role="dialog"
  >
    <div
      id="Uakgb_J5m9g-0JDMbcJqLJ"
    >
      Button tester
    </div>
    <div
      className="p-modal__button-row"
    >
      <button
        key="1"
      >
        Button 1
      </button>
      <button
        key="2"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal  renders 1`] = `
<div
  className="p-modal"
  onClick={[MockFunction]}
>
  <div
    aria-describedby="Uakgb_J5m9g-0JDMbcJqLJ"
    aria-labelledby="Uakgb_J5m9g-0JDMbcJqLJ"
    className="p-modal__dialog"
    onClick={[Function]}
    role="dialog"
  >
    <header
      className="p-modal__header"
    >
      <h2
        className="p-modal__title"
        id="Uakgb_J5m9g-0JDMbcJqLJ"
      >
        Confirm delete
      </h2>
      <button
        aria-label="Close active modal"
        className="p-modal__close"
        onClick={[MockFunction]}
      >
        Close
      </button>
    </header>
    <div
      id="Uakgb_J5m9g-0JDMbcJqLJ"
    >
      Are you sure?
    </div>
  </div>
</div>
`;
